# TechSolveHR

./: .gitignore  CMakeLists.txt  README.md  TechSolveHR.sln
TechSolveHR/: AdminUser.cpp  AdminUser.h  AttendanceData.cpp  AttendanceData.h  AttendanceRecord.cpp  AttendanceRecord.h  Console.h  EditableData.cpp  EditableData.h  EmergencyData.cpp  EmergencyData.h  Employee.cpp  Employee.h  LeaveData.cpp  LeaveData.h  LeaveRecord.cpp  LeaveRecord.h  OvertimeData.cpp  OvertimeData.h  PerformanceData.cpp  PerformanceData.h  PerformanceReview.cpp  PerformanceReview.h  PersonalData.cpp  PersonalData.h  TechSolveHR.cpp  TechSolveHR.vcxproj  TechSolveHR.vcxproj.filters  User.cpp  User.h  WorkData.cpp  WorkData.h  admins.json  boolinq.h  employees.json  json.hpp
